# owo_cli

./: .gitignore  pyproject.toml
.github/workflows/: release.yml
src/owo/: cli.py
src/owo_cli/: cli.py
