[project]
name = "owo_cli"
version = "0.1.0"
description = "Add an alias for thefuck on any system"
readme = "README.md"
authors = [
    { name = "Thorn Parker", email = "thornparker13@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "argparse>=1.4.0",
]

[project.urls]
Repository = "https://github.com/thxrn13/owo"

[project.scripts]
owo_cli = "owo.cli:main"

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"
